@startuml Class_AI_Models
!theme plain
skinparam class {
  BackgroundColor<<new>> #DDFFD6
  BorderColor<<new>> #2E8B57
  BackgroundColor<<existing>> #F0F8FF
}

title Class Diagram: Cac Model AI va IDE (BKDNOJ moi)

class Profile <<existing>> {
  +user: OneToOne(User)
  +points: float
  +contribution_points: int
  +rating: int
  +ban_reason: text
  --
  +calculate_contribution_points()
  +ban_user(reason)
  +unban_user()
}

class Problem <<existing>> {
  +code: varchar(32) {unique}
  +name: varchar(100)
  +time_limit: float
  +memory_limit: int
  +enable_new_ide: boolean
  --
  +is_accessible_by(user)
  +is_editable_by(user)
}

class Submission <<existing>> {
  +user: FK(Profile)
  +problem: FK(Problem)
  +language: FK(Language)
  +status: varchar(2)
  +result: varchar(3)
  +points: float
  +case_points: float
  +case_total: float
  --
  +judge()
  +get_id_secret()
}

class Language <<existing>> {
  +key: varchar(30) {unique}
  +name: varchar(100)
  +ace: varchar(30)
}

class Judge <<existing>> {
  +name: varchar(50) {unique}
  +online: boolean
  +load: float
}

class AIAPIKey <<new>> {
  +user: FK(Profile)
  +provider: varchar(20)
  +key_ciphertext: text
  +key_last4: varchar(4)
  +status: varchar(10)
  +status_detail: text
  +default_model: varchar(100)
  +last_used_at: datetime
  +added_at: datetime
  --
  +store_key(plaintext)
  +decrypt_key(): string
  ..
  Unique: (user, provider)
  Encryption: Fernet(SHA-256(SECRET_KEY))
}

class AIAPIKeyTestLog <<new>> {
  +api_key: FK(AIAPIKey)
  +provider: varchar(20)
  +model_tested: varchar(100)
  +success: boolean
  +detail: text
  +response_time_ms: int
  +tested_at: datetime
}

class AICodeReview <<new>> {
  +submission: FK(Submission)
  +user: FK(Profile)
  +provider: varchar(20)
  +model: varchar(100)
  +review_text: text
  +output_language: varchar(20)
  +created_at: datetime
}

class AIPromptTemplate <<new>> {
  +key: varchar(50) {unique}
  +name: varchar(100)
  +prompt_text: text
  +description: text
  +updated_at: datetime
  --
  +get_prompt(key, default)
  ..
  Keys: ai_code_review,
  ai_problem_creator, ai_gen_code,
  api_key_test
}

class RunSubmission <<new>> {
  +user: FK(Profile)
  +problem: FK(Problem)
  +language: FK(Language)
  +source: text
  +status: varchar(2)
  +result: varchar(3)
  +case_results: JSONField
  +case_points: float
  +case_total: float
  +judged_on: FK(Judge)
  --
  +get_id_secret()
  ..
  HMAC-SHA512 with
  EVENT_DAEMON_RUN_KEY
}

class GensolJob <<new>> {
  +problem: FK(Problem)
  +user: FK(Profile)
  +status: varchar(20)
  +generator_source: text
  +generator_language: FK(Language)
  +solution_source: text
  +solution_language: FK(Language)
  +num_cases: int
  +current_step: varchar(20)
  +current_testcase: int
  +error_message: text
  +judged_on: FK(Judge)
  --
  +get_id_secret()
  ..
  Status flow:
  PENDING -> GENERATING_INPUT
  -> GENERATING_OUTPUT
  -> UPLOADING -> DONE/ERROR
}

class ProblemTestCase <<existing>> {
  +dataset: FK(ProblemData)
  +order: int
  +input_file: varchar
  +output_file: varchar
  +points: int
  +is_pretest: boolean
  +is_sample: boolean
  ..
  is_sample: BKDNOJ moi
  (danh dau cho IDE Run)
}

' === Relationships ===
Profile "1" --> "*" AIAPIKey
AIAPIKey "1" --> "*" AIAPIKeyTestLog
Profile "1" --> "*" AICodeReview
Submission "1" --> "*" AICodeReview
Profile "1" --> "*" RunSubmission
Problem "1" --> "*" RunSubmission
Profile "1" --> "*" GensolJob
Problem "1" --> "*" GensolJob
Language "1" --> "*" RunSubmission
Language "1" --> "*" GensolJob : generator_language
Language "1" --> "*" GensolJob : solution_language
Judge "1" --> "*" RunSubmission : judged_on
Judge "1" --> "*" GensolJob : judged_on

@enduml
